<resources>
    <string name="app_name">Amanda Homestay</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Selamat Datang, "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navigation_drawer_open">Open navigatoin drawer</string>
    <string name="navigation_drawer_close">Close navigatoin drawer</string>
    <string name="title_activity_coba">CobaActivity</string>
    <!-- Strings used for Activity for Tenant Data -->
    <string name="tenant_name">Nama Penyewa</string>
    <string name="detail">Detail</string>

    <string name="bookkeeping_info">Harap masukan data pembukuan dengan benar</string>
    <string name="name">Nama</string>
    <string name="room_number">Nomor Kamar</string>
    <string name="entry_date">Tanggal Masuk</string>
    <string name="out_date">Tanggal Keluar</string>
    <string name="price">Harga</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batal</string>

    <string name="addres">Jl. Dr Sutomo Gg Mushola\nKedaton Bandar Lampung</string>
    <string name="owner_addres">Jl. Drs Warito No.28 Kupang Teluk Betung Utara</string>
    <string name="owner_phone">081806190000 / 082375511016</string>


</resources>