<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:padding="15dp"
    tools:context=".BookkeepingActivity">

    <TextView
        android:id="@+id/tvInfoPembukuan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/bookkeeping_info"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoPembukuan">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tenant_name"
                android:textColor="@color/primary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edt_tenant_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_border_2"
                android:ems="10"
                android:hint="@string/tenant_name"
                android:inputType="textPersonName"
                android:maxLength="50"
                android:padding="11dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_room_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/room_number"
                android:textColor="@color/primary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_tenant_name" />

            <EditText
                android:id="@+id/edt_room_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_border_2"
                android:ems="10"
                android:hint="@string/room_number"
                android:inputType="textCapWords"
                android:maxLength="3"
                android:padding="11dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_room_number" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="Nomor Telepon"
                android:textColor="@color/primary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_room_number" />

            <EditText
                android:id="@+id/edt_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_border_2"
                android:ems="10"
                android:hint="Nomor Telepon"
                android:inputType="phone"
                android:maxLength="13"
                android:padding="11dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_phone_number" />

            <TextView
                android:id="@+id/tv_entry_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/entry_date"
                android:textColor="@color/primary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/edt_entry_date"
                app:layout_constraintTop_toBottomOf="@+id/edt_phone_number" />

            <TextView
                android:id="@+id/tv_out_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/out_date"
                android:textColor="@color/primary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/edt_out_date"
                app:layout_constraintTop_toBottomOf="@+id/edt_phone_number" />

            <EditText
                android:id="@+id/edt_entry_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_border_2"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/entry_date"
                android:inputType="date"
                android:maxLength="10"
                android:padding="13dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/edt_out_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_entry_date" />

            <EditText
                android:id="@+id/edt_out_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/round_border_2"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/out_date"
                android:inputType="date"
                android:maxLength="10"
                android:padding="13dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/edt_entry_date"
                app:layout_constraintTop_toBottomOf="@+id/tv_out_date" />

            <TextView
                android:id="@+id/tv_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="Biaya"
                android:textColor="@color/primary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_entry_date" />

            <com.cottacush.android.currencyedittext.CurrencyEditText
                android:id="@+id/edt_cost"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/round_border_2"
                android:inputType="numberDecimal"
                android:maxLength="14"
                android:padding="12dp"
                android:textSize="14sp"
                app:currencySymbol="Rp"
                app:layout_constraintEnd_toStartOf="@+id/edt_out_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cost"
                app:localeTag="id-ID"
                app:useCurrencySymbolAsHint="true" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_1"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cl_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_cost">

                <Button
                    android:id="@+id/btn_save"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_booking"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="81dp"
                    android:layout_height="0dp"
                    android:text="Booking"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_tenant"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_tenant"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="81dp"
                    android:layout_height="0dp"
                    android:text="Data Penyewa"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_booking"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_2"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cl_1"
                app:layout_constraintTop_toBottomOf="@+id/edt_cost">

                <Button
                    android:id="@+id/btn_cancel"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:shadowColor="@color/black"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/primary"
                    android:theme="@style/ButtonStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>